<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Module Metadata TEST FOR PUSHING PURPOSES -->

  <groupId>org.ihtsdo.otf.refset</groupId>
  <artifactId>refset-parent</artifactId>
  <version>1.4.23-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>IHTSDO refset management service parent</name>
  <description>Parent project. Used to define versions of third party modules</description>

  <properties>
    <!-- Set default maven settings -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <releaseVersion>${project.version}</releaseVersion>

    <!-- Set third-party dependency versions -->
    <cglib.version>3.3.0</cglib.version>
    <com.google.guava.version>29.0-jre</com.google.guava.version>
    <com.sun.mail.version>1.6.2</com.sun.mail.version>
    <fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>

    <hibernate.c3p0.version>5.4.24.Final</hibernate.c3p0.version>
    <hibernate.core.version>5.4.24.Final</hibernate.core.version>
    <hibernate.entitymanager.version>5.4.24.Final</hibernate.entitymanager.version>
    <hibernate.envers.version>5.4.24.Final</hibernate.envers.version>
    <hibernate.search.version>5.11.2.Final</hibernate.search.version>
    <hibernate.validator.version>6.0.20.Final</hibernate.validator.version>

    <javax.activation.version>1.1.1</javax.activation.version>
    <javax.servlet.version>4.0.1</javax.servlet.version>
    <javax.transaction.version>1.1</javax.transaction.version>
    <javax.websocket.version>1.1</javax.websocket.version>
    <javax.ws.rs.version>2.1.1</javax.ws.rs.version>
    <javax.xml.bind.version>2.3.1</javax.xml.bind.version>

    <jaxb.runtime.version>2.4.0-b180608.0325</jaxb.runtime.version>

    <!-- <jaxb.core.version>2.2.11</jaxb.core.version> <jaxb.impl.version>2.2.11</jaxb.impl.version> 
      <jaxb.runtime.version>2.2.11</jaxb.runtime.version> -->
    <java.version>11</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <jersey.core.version>2.29</jersey.core.version>
    <jersey.media.version>2.29</jersey.media.version>
    <junit.version>4.13.1</junit.version>
    <lucene.version>5.5.5</lucene.version>
    <maven.antrun.plugin.version>1.7</maven.antrun.plugin.version>
    <maven.build.helper.plugin.version>1.9.1</maven.build.helper.plugin.version>
    <!-- <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version> -->
    <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
    <maven.invoker.version>3.0.1</maven.invoker.version>
    <maven.jgitflow.plugin.version>1.0-m1.1</maven.jgitflow.plugin.version>
    <maven.plugin.annotations.version>3.6.0</maven.plugin.annotations.version>
    <maven.plugin.api.version>3.6.2</maven.plugin.api.version>
    <maven.plugin.plugin.version>3.6.0</maven.plugin.plugin.version>
    <maven.properties.plugin.version>1.0-alpha-2</maven.properties.plugin.version>
    <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
    <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
    <maven.truezip.plugin.version>1.2</maven.truezip.plugin.version>
    <maven.versions.plugin.version>2.3</maven.versions.plugin.version>
    <maven.war.plugin.version>2.6</maven.war.plugin.version>
    <mysql.connector.version>8.0.28</mysql.connector.version>
    <net.sf.trove4j.version>3.0.3</net.sf.trove4j.version>
    <org.apache.commons.lang3.version>3.9</org.apache.commons.lang3.version>
    <org.apache.commons.text.version>1.8</org.apache.commons.text.version>
    <org.apache.poi.ooxml.version>4.1.0</org.apache.poi.ooxml.version>
    <org.json.version>20190722</org.json.version>
    <org.reflections.version>0.9.10</org.reflections.version>
    <slf4j.log4j12.version>1.7.28</slf4j.log4j12.version>
    <swagger.jersey2.version>1.3.13</swagger.jersey2.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Dependencies. -->
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-model</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-services</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-jpa-model</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-jpa-services</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-rest</artifactId>
        <version>${releaseVersion}</version>
        <classifier>classes</classifier>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-rest-client</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-custom</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.refset</groupId>
        <artifactId>refset-mojo</artifactId>
        <version>${releaseVersion}</version>
      </dependency>

      <!-- JPA dependencies -->
      <dependency>
        <groupId>javax.transaction</groupId>
        <artifactId>jta</artifactId>
        <version>${javax.transaction.version}</version>
      </dependency>

      <!-- hibernate -->
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-entitymanager</artifactId>
        <version>${hibernate.entitymanager.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-c3p0</artifactId>
        <version>${hibernate.c3p0.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-search-orm</artifactId>
        <version>${hibernate.search.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-envers</artifactId>
        <version>${hibernate.envers.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate.validator</groupId>
        <artifactId>hibernate-validator</artifactId>
        <version>${hibernate.validator.version}</version>
      </dependency>

      <!-- lucene -->
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-queryparser</artifactId>
        <version>${lucene.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-suggest</artifactId>
        <version>${lucene.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-backward-codecs</artifactId>
        <version>${lucene.version}</version>
      </dependency>

      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>${mysql.connector.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.log4j12.version}</version>
      </dependency>

      <!-- maven -->
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${maven.plugin.api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${maven.plugin.annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.resources.plugin.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.shared</groupId>
        <artifactId>maven-invoker</artifactId>
        <version>${maven.invoker.version}</version>
      </dependency>

      <!-- Websocket API -->
      <dependency>
        <groupId>javax.websocket</groupId>
        <artifactId>javax.websocket-api</artifactId>
        <version>${javax.websocket.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Required for Jersey and JSON -->
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>${org.json.version}</version>
      </dependency>

      <!-- jersey -->
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-client</artifactId>
        <version>${jersey.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-common</artifactId>
        <version>${jersey.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.inject</groupId>
        <artifactId>jersey-hk2</artifactId>
        <version>${jersey.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-processing</artifactId>
        <version>${jersey.media.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-jackson</artifactId>
        <version>${jersey.media.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet</artifactId>
        <version>${jersey.media.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-multipart</artifactId>
        <version>${jersey.media.version}</version>
      </dependency>

      <!-- jackson -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${fasterxml.jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.module</groupId>
        <artifactId>jackson-module-jaxb-annotations</artifactId>
        <version>${fasterxml.jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${fasterxml.jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.wordnik</groupId>
        <artifactId>swagger-jersey2-jaxrs_2.10</artifactId>
        <version>${swagger.jersey2.version}</version>
      </dependency>

      <!-- javax -->
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>${javax.servlet.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>javax.ws.rs</groupId>
        <artifactId>javax.ws.rs-api</artifactId>
        <version>${javax.ws.rs.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>${javax.xml.bind.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.activation</groupId>
        <artifactId>activation</artifactId>
        <version>${javax.activation.version}</version>
      </dependency>

      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>javax.mail</artifactId>
        <version>${com.sun.mail.version}</version>
      </dependency>

      <!-- jaxb -->
      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>${jaxb.runtime.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${com.google.guava.version}</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>

      <dependency>
        <groupId>cglib</groupId>
        <artifactId>cglib</artifactId>
        <version>${cglib.version}</version>
      </dependency>

      <!-- Apache commons-lang3 - for FastDateTime -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${org.apache.commons.lang3.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${org.apache.commons.text.version}</version>
      </dependency>

      <!-- poi for reading and creating excel files -->
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${org.apache.poi.ooxml.version}</version>
      </dependency>

      <!-- 0.9.11 throw exceptions, keep older version -->
      <dependency>
        <groupId>org.reflections</groupId>
        <artifactId>reflections</artifactId>
        <version>${org.reflections.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>

    <!-- Declare Project Plugin Versions -->
    <pluginManagement>
      <plugins>

        <!-- Maven plugins -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${maven.plugin.plugin.version}</version>
          <configuration>
            <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
          </configuration>
          <executions>
            <execution>
              <id>default-descriptor</id>
              <goals>
                <goal>descriptor</goal>
              </goals>
              <phase>process-classes</phase>
            </execution>
            <!-- if you want to generate help goal -->
            <execution>
              <id>help-goal</id>
              <goals>
                <goal>helpmojo</goal>
              </goals>
              <phase>process-classes</phase>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven.dependency.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>${maven.antrun.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>${java.version}</release>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>6.2</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <skipTests>false</skipTests>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven.war.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>external.atlassian.jgitflow</groupId>
          <artifactId>jgitflow-maven-plugin</artifactId>
          <version>${maven.jgitflow.plugin.version}</version>
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <enableSshAgent>true</enableSshAgent>
            <noDeploy>true</noDeploy>
          </configuration>
        </plugin>

        <!-- Properties plugin, for loading properties from a file -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>${maven.properties.plugin.version}</version>
        </plugin>

        <!-- For attaching zip artifacts -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${maven.build.helper.plugin.version}</version>
        </plugin>

        <!-- For building zip files -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>truezip-maven-plugin</artifactId>
          <version>${maven.truezip.plugin.version}</version>
        </plugin>

        <!-- Rules for checking for dependency updates -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${maven.versions.plugin.version}</version>
          <configuration>
            <rulesUri>file:///${project.basedir}/rules.xml</rulesUri>
          </configuration>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>display-dependency-updates</goal>
                <goal>display-plugin-updates</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>

  <!-- Distribution management -->
  <repositories>
    <repository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Releases</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-releases/</url>
    </repository>
    <repository>
      <id>ihtsdo-public-nexus-snapshot</id>
      <name>IHTSDO Public Nexus Snapshots</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-snapshots/</url>
    </repository>
    <repository>
      <id>jvnet-nexus-staging</id>
      <url>http://maven.java.net/content/repositories/staging/</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Releases</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-releases/</url>
    </repository>
    <snapshotRepository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Snapshots</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

</project>